updated with overflow auto so page >> will show correctly when scrolled out.

--- a/contact.css
+++ b/contact.css
@@ -1,5 +1,6 @@
 html {
 background-color:	#0a767f;
+overflow: auto;
 }
 
 #mainnav {
